# dreamplan-ai-financial-advisor

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  db.py  dispatcher.py  dispatching.py  docker-compose.yml  evaluation.ipynb  main.py  pipeline.py  products.ipynb  pyproject.toml  rag.py  runner.ipynb  tools.py
.github/workflows/: test.yaml
calculation/: client.py  factories.py  templates.py
components/: chat.py  dispatching.py  pipeline.py  prompts.py  rag.py  tools.py
data/: dispatching.csv  prompts.py
datasets/: prompts.py
documents/: index.md  prices.json  prices.txt  products.json
documents/txt/: lifeindenmark.borger.dk_about-life-in-denmark_About-lifeindenmark_how-udbetaling-danmark-public-benefits-administration-processes-your-personal-data.txt  lifeindenmark.borger.dk_apps-and-digital-services_nemkonto-your-public-bank-account.txt  lifeindenmark.borger.dk_family-and-children_childcare_income-based-daycare-subsidy--sibling-subsidy-and-other-subsidies.txt  lifeindenmark.borger.dk_family-and-children_childcare_rules-for-day-care-facilities.txt  lifeindenmark.borger.dk_family-and-children_couples_getting-married_if-you-wish-to-get-married-in-denmark.txt  lifeindenmark.borger.dk_family-and-children_family-benefits_child-allowance.txt  (+330 more)
evaluation/: evaluations.py
experiment/: evaluation.ipynb  evaluations.py
notebooks/: runner.ipynb
scraping/: blacklist.py  scraper.py
static/: main.css  script.js
templates/: index.html
tests/: conftest.py  test_calculation.py  test_chat.py  test_client.py  test_db.py  test_rag.py
(+7 files in other folders)
