[project]
name = "master-thesis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.4",
    "openapi-generator-cli>=7.12.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.0",
]
