[project]
name = "master-thesis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "haystack-ai>=2.13.1",
    "jupyter>=1.1.1",
    "openai-agents>=0.0.4",
    "openapi-generator-cli>=7.12.0",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.0",
    "torch>=2.7.0",
]
